<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- Menu Options -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map" translatable="false">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_cities">Cities</string>
    <string name="action_city_remove">Delete</string>
    <string name="action_city_add">Add</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Titles -->
    <string name="app_name">Sunshine</string>
    <string name="title_activity_forecast">Forecast</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_city">Locations</string>

    <!-- Preferences -->
    <string name="pref_location">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">3059,AU</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification_key">last_notification</string>
    <string name="pref_last_notification_default">0</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings related to Use GPS preference -->
    <string name="pref_enable_gps_location_key" translatable="false">enable_gps_position</string>
    <string name="pref_enable_gps_location_label">Use GPS to determine device location</string>
    <string name="pref_enable_gps_location_true">Using GPS location</string>
    <string name="pref_enable_gps_location_false">Using network location</string>
    <string name="pref_enable_gps_location_default" translatable="false">false</string>

    <!-- Preference Category Headings -->
    <string name="pref_settings_display_preferences">DISPLAY PREFERENCES</string>
    <string name="pref_settings_sync_preferences">SYNC PREFERENCES</string>

    <!-- Strings related to sync frequency -->
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_key">sync_frequency</string>
    <string name="pref_sync_frequency_default">3</string>
    <string name="pref_sync_frequency_value3_label">3 Hours</string>
    <string name="pref_sync_frequency_value3_value">3</string>
    <string name="pref_sync_frequency_value6_label">6 Hours</string>
    <string name="pref_sync_frequency_value6_value">6</string>
    <string name="pref_sync_frequency_value12_label">12 Hours</string>
    <string name="pref_sync_frequency_value12_value">12</string>
    <string name="pref_sync_frequency_value24_label">1 Day</string>
    <string name="pref_sync_frequency_value24_value">24</string>

    <!-- Strings related to times run -->
    <string name="pref_sync_times_run_key">times_run</string>
    <string name="pref_sync_times_run_default">0</string>

    <!-- Strings related to last sync date -->
    <string name="pref_last_sync_key">last_sync</string>
    <string name="pref_last_sync_default">0</string>

    <!-- Strings related to last location -->
    <string name="pref_last_used_location_key">last_location_used</string>
    <string name="pref_last_used_location_default">0</string>
    <string name="pref_last_used_location_error">Could not display map, no known last location for sync</string>

    <!-- Strings related to keeping track of the day -->
    <string name="pref_today_datetime_key">today_datetime</string>
    <string name="pref_today_datetime_default">0</string>

    <!-- Strings related to empty list -->
    <string name="format_empty_forecast_list">No weather information available</string>
    <string name="format_empty_forecast_list_no_network">No weather information available\nThe network is not available to fetch data</string>

    <string name="today_pressure_text">Pressure</string>
    <string name="today_humidity_text">Humidity</string>
    <string name="today_wind_text">Wind</string>

    <string name="format_last_sync">Updated <xliff:g id="l_date">%1$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure_today"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity_today"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_highlow_temperature"><xliff:g id="high_temp">%1.0f</xliff:g>\u00B0 / <xliff:g id="low_temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_wind_mph_today"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh_today"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="format_notification_current"><xliff:g id="location">%1$s</xliff:g> Currently <xliff:g id="c_temp">%2$s</xliff:g> <xliff:g id="c_condition">%3$s</xliff:g></string>

</resources>
