<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_settings_display_preferences"
        android:key="pref_key_display_settings">
        <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_units_metric"
            android:entryValues="@array/pref_units_values"
            android:entries="@array/pref_units_options" />

        <SwitchPreference
            android:title="@string/pref_enable_notifications_label"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_settings_sync_preferences"
        android:key="pref_key_sync_settings">
        <EditTextPreference
            android:title="@string/pref_location"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true" />

        <SwitchPreference
            android:title="@string/pref_enable_gps_location_label"
            android:key="@string/pref_enable_gps_location_key"
            android:summaryOff="@string/pref_enable_gps_location_false"
            android:summaryOn="@string/pref_enable_gps_location_true"
            android:defaultValue="@string/pref_enable_gps_location_default" />

        <ListPreference
            android:defaultValue="@string/pref_sync_frequency_default"
            android:entries="@array/pref_sync_frequency_options"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="@string/pref_sync_frequency_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>