<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_cities"
        android:title="@string/action_cities"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_city_add"
        android:title="@string/action_city_add"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <group
        android:id="@+id/action_more_group"
        android:title="@string/action_cities"
        app:showAsAction="always">
        <item
            android:id="@+id/action_city_remove"
            android:title="@string/action_city_remove"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>
