<!-- Master layout. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@drawable/today_touch_selector">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="#26ffffff"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">
        <TextView
            android:id="@+id/today_last_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Updated 2/11 14:04"
            android:gravity="right"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="40dp">

            <!-- Header: Location, Day, Date -->
            <TextView
                android:fontFamily="sans-serif"
                android:id="@+id/today_location_textview"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:gravity="center"
                android:text="Melbourne"
                android:typeface="serif" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/today_date_textview"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:text="Wed, 2 November 14:53"
                android:paddingTop="6dp" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/today_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:gravity="center_vertical|left"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_current_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-condensed" />

                    <TextView
                        android:id="@+id/today_high_low_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingTop="4dp"/>
                    </LinearLayout>
            </LinearLayout>

            <TextView
                android:paddingTop="12dp"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/today_weather_textview"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/today_humidity_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/today_humidity_text"/>
                    <TextView
                        android:paddingTop="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/today_humidity_value_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/today_pressure_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/today_pressure_text"/>
                    <TextView
                        android:paddingTop="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/today_pressure_value_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/today_wind_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/today_wind_text"/>
                    <TextView
                        android:paddingTop="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/today_wind_value_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
